--- a/django/rest/drf_permissions/requirements.txt
+++ b/django/rest/drf_permissions/requirements.txt
@@ -52,7 +52,7 @@ SQLAlchemy==1.2.10
 tenacity==4.12.0
 threadpool==1.3.2
 uritemplate==3.0.0
-urllib3==1.22
+urllib3>=1.23
 Werkzeug==0.14.1
 Whoosh==2.7.4
 XlsxWriter==1.0.5
