--- a/django/rest/drf_permissions/requirements.txt
+++ b/django/rest/drf_permissions/requirements.txt
@@ -46,7 +46,7 @@ PyMySQL==0.8.1
 pytz==2018.4
 raven==6.9.0
 redis==2.10.6
-requests==2.18.4
+requests>=2.20.0
 six==1.11.0
 SQLAlchemy==1.2.10
 tenacity==4.12.0
